<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingActivity">

    <TextView
        android:id="@+id/idShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/shopping"
        android:textColor="#F80404"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/idTabShopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idShopping"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idLojas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lojas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idCinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idRestaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurante" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idParque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parques" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idEstacionamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estacionamento" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idClinica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cl_nica" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idAcademia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/academia" />

    </com.google.android.material.tabs.TabLayout>


</RelativeLayout>